--- a/package.json
+++ b/package.json
@@ -29,20 +29,25 @@
     "@nestjs/sequelize": "^11.0.0",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/websockets": "^11.1.3",
+    "@socket.io/redis-adapter": "^8.3.0",
     "@web-std/file": "^3.0.3",
     "axios": "^1.10.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^16.5.0",
+    "ioredis": "^5.6.1",
     "joi": "^17.13.3",
     "pg": "^8.16.0",
+    "pg-listen": "^1.7.0",
     "pinata": "^2.4.8",
+    "redis": "^5.5.6",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "sequelize": "^6.37.7",
     "sequelize-auto-migrations": "^1.0.3",
     "sequelize-typescript": "^2.1.6",
     "sharp": "^0.34.2",
+    "socket.io-redis": "^5.4.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
